--- a/vignettes/examples.Rmd
+++ b/vignettes/examples.Rmd
@@ -14,8 +14,8 @@ knitr::opts_chunk$set(
 )
 ```
 
-This section contains a number of examples on how to use `clugenr`. Each example
-must be preceded with:
+This vignette contains a number of examples on how to use `clugenr`. Each
+example must be preceded with:
 
 ```{r setup, message=FALSE, warning=FALSE}
 library(clugenr)
@@ -30,15 +30,16 @@ marker2d <- list(line = list(color = 'black', width = 0.3))
 
 ### Manipulating the direction of cluster-supporting lines
 
-```{r}
-xaxis <- list(range = c(-10, 30))
-yaxis <- list(scaleanchor = "x", scaleratio = 1, range = c(-22, 22))
-```
-
 #### Using the `direction` parameter
 
 ```{r}
-set.seed(123)
+xaxis <- list(range = c(-10, 30))
+yaxis <- list(scaleanchor = "x", scaleratio = 1, range = c(-22, 22))
+seed <- 123
+```
+
+```{r}
+set.seed(seed)
 e01 <- clugen(2, 4, 200, c(1, 0), 0, c(10, 10), 10, 1.5, 0.5)
 plot_ly(x = e01$points[, 1], y = e01$points[, 2], color = as.character(e01$point_clusters),
         type = "scatter", mode = "markers", marker = marker2d) %>%
@@ -46,7 +47,7 @@ plot_ly(x = e01$points[, 1], y = e01$points[, 2], color = as.character(e01$point
 ```
 
 ```{r}
-set.seed(123)
+set.seed(seed)
 e02 <- clugen(2, 4, 200, c(1, 1), 0, c(10, 10), 10, 1.5, 0.5)
 plot_ly(x = e02$points[, 1], y = e02$points[, 2], color = as.character(e02$point_clusters),
         type = "scatter", mode = "markers", marker = marker2d) %>%
@@ -54,12 +55,124 @@ plot_ly(x = e02$points[, 1], y = e02$points[, 2], color = as.character(e02$point
 ```
 
 ```{r}
-set.seed(123)
+set.seed(seed)
 e03 <- clugen(2, 4, 200, c(0, 1), 0, c(10, 10), 10, 1.5, 0.5)
 plot_ly(x = e03$points[, 1], y = e03$points[, 2], color = as.character(e03$point_clusters),
         type = "scatter", mode = "markers", marker = marker2d) %>%
   layout(title = "e03: direction = [0, 1]", xaxis = xaxis, yaxis = yaxis, showlegend = F)
 ```
+
+#### Changing the `angle_disp` parameter and using a custom `angle_deltas_fn` function
+
+```{r}
+xaxis <- list(range = c(-38, 38))
+yaxis <- list(scaleanchor = "x", scaleratio = 1, range = c(-20, 40))
+seed <- 123
+```
+
+```{r}
+set.seed(seed)
+e04 <- clugen(2, 6, 500, c(1, 0), 0, c(10, 10), 10, 1.5, 0.5)
+plot_ly(x = e04$points[, 1], y = e04$points[, 2], color = as.character(e04$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e04: angle_disp = 0", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+
+```{r}
+set.seed(seed)
+e05 <- clugen(2, 6, 500, c(1, 0), pi / 8, c(10, 10), 10, 1.5, 0.5)
+plot_ly(x = e05$points[, 1], y = e05$points[, 2], color = as.character(e05$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e05: angle_disp = π/8", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+```{r}
+# Custom angle_deltas function: arbitrarily rotate some clusters by 90 degrees
+angdel_90_fn <- function(nclu, astd) sample(c(0, pi / 2), nclu, replace = T)
+
+set.seed(seed)
+e06 <- clugen(2, 6, 500, c(1, 0), 0, c(10, 10), 10, 1.5, 0.5, angle_deltas_fn = angdel_90_fn)
+plot_ly(x = e06$points[, 1], y = e06$points[, 2], color = as.character(e06$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e06: custom angle_deltas function", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+### Manipulating the length of cluster-supporting lines
+
+#### Using the `llength` parameter
+
+```{r}
+xaxis <- list() #range = c(-38, 38))
+yaxis <- list(scaleanchor = "x", scaleratio = 1) #, range = c(-20, 40))
+seed <- 321
+```
+
+```{r}
+set.seed(seed)
+e07 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 0, 0, 0.5, point_dist_fn = "n")
+plot_ly(x = e07$points[, 1], y = e07$points[, 2], color = as.character(e07$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e06: llength = 0", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+```{r}
+set.seed(seed)
+e08 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 10, 0, 0.5, point_dist_fn = "n")
+plot_ly(x = e08$points[, 1], y = e08$points[, 2], color = as.character(e08$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e08: llength = 10", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+```{r}
+set.seed(seed)
+e09 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 30, 0, 0.5, point_dist_fn = "n")
+plot_ly(x = e09$points[, 1], y = e09$points[, 2], color = as.character(e09$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e09: length = 30", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+#### Changing the `llength_disp` parameter and using a custom `llengths_fn` function
+
+```{r}
+xaxis <- list(range = c(-20, 29))
+yaxis <- list(scaleanchor = "x", scaleratio = 1, range = c(-35, 20))
+seed <- 765
+```
+
+```{r}
+set.seed(seed)
+e10 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 15,  0.0, 0.5, point_dist_fn = "n")
+plot_ly(x = e10$points[, 1], y = e10$points[, 2], color = as.character(e10$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e10: llength_disp = 0.0", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+```{r}
+set.seed(seed)
+e11 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 15, 10.0, 0.5, point_dist_fn = "n")
+plot_ly(x = e11$points[, 1], y = e11$points[, 2], color = as.character(e11$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e11: llength_disp = 5.0", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+```{r}
+# Custom llengths function: line lengths grow for each new cluster
+llen_grow_fn <- function(nclu, llen, llenstd) llen * 0:(nclu - 1) + rnorm(nclu, sd = llenstd)
+
+set.seed(seed)
+e12 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 10,  0.1, 0.5, llengths_fn = llen_grow_fn, point_dist_fn = "n")
+plot_ly(x = e12$points[, 1], y = e12$points[, 2], color = as.character(e12$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e12: custom llengths function", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+
+
+
+
+
+
 
 ## 3D examples
 
@@ -69,16 +182,17 @@ marker3d <- list(size = 3, line = list(color = 'black', width = 0.3))
 
 ### Manipulating the direction of cluster-supporting lines
 
+#### Using the `direction` parameter
+
 ```{r}
 scene <- list(xaxis = list(range = list(-12, 27), dtick = 10),
               yaxis = list(range = list(-17, 22), dtick = 10),
               zaxis = list(range = list(-22, 22), dtick = 10))
+seed <- 123
 ```
 
-#### Using the `direction` parameter
-
 ```{r}
-set.seed(123)
+set.seed(seed)
 e40 <- clugen(3, 4, 500, c(1, 0, 0), 0, c(10, 10, 10), 15, 1.5, 0.5)
 plot_ly(x = e40$points[, 1], y = e40$points[, 2], z = e40$points[, 3],
         color = as.character(e40$point_clusters),
@@ -87,7 +201,7 @@ plot_ly(x = e40$points[, 1], y = e40$points[, 2], z = e40$points[, 3],
 ```
 
 ```{r}
-set.seed(123)
+set.seed(seed)
 e41 <- clugen(3, 4, 500, c(1, 1, 1), 0, c(10, 10, 10), 15, 1.5, 0.5)
 plot_ly(x = e41$points[, 1], y = e41$points[, 2], z = e41$points[, 3],
         color = as.character(e41$point_clusters),
@@ -96,7 +210,7 @@ plot_ly(x = e41$points[, 1], y = e41$points[, 2], z = e41$points[, 3],
 ```
 
 ```{r}
-set.seed(123)
+set.seed(seed)
 e42 <- clugen(3, 4, 500, c(0, 0, 1), 0, c(10, 10, 10), 15, 1.5, 0.5)
 plot_ly(x = e42$points[, 1], y = e42$points[, 2], z = e42$points[, 3],
         color = as.character(e42$point_clusters),
