--- a/vignettes/examples.Rmd
+++ b/vignettes/examples.Rmd
@@ -25,7 +25,7 @@ library(plotly)  # Required for plotting
 ## 2D examples
 
 ```{r}
-marker2d <- list(line = list(color = 'black', width = 0.3))
+marker2d <- list(size = 4, line = list(color = 'black', width = 0.2))
 ```
 
 ### Manipulating the direction of cluster-supporting lines
@@ -167,6 +167,78 @@ plot_ly(x = e12$points[, 1], y = e12$points[, 2], color = as.character(e12$point
   layout(title = "e12: custom llengths function", xaxis = xaxis, yaxis = yaxis, showlegend = F)
 ```
 
+### Manipulating relative cluster positions
+
+#### Using the `cluster_sep` parameter
+
+```{r}
+xaxis <- list(range = c(-130, 100))
+yaxis <- list(scaleanchor = "x", scaleratio = 1, range = c(-100, 120))
+seed <- 222
+```
+
+```{r}
+set.seed(seed)
+e13 <- clugen(2, 8, 1000, c(1, 1), pi / 4, c(10, 10), 15, 2, 4)
+plot_ly(x = e13$points[, 1], y = e13$points[, 2], color = as.character(e13$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e13: cluster_sep = [10, 10]", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+```{r}
+set.seed(seed)
+e14 <- clugen(2, 8, 1000, c(1, 1), pi / 4, c(30, 10), 15, 2, 4)
+plot_ly(x = e14$points[, 1], y = e14$points[, 2], color = as.character(e14$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e14: cluster_sep = [30, 10]", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+```{r}
+set.seed(seed)
+e15 <- clugen(2, 8, 1000, c(1, 1), pi / 4, c(10, 30), 15, 2, 4)
+plot_ly(x = e15$points[, 1], y = e15$points[, 2], color = as.character(e15$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e15: cluster_sep = [10, 30]", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+#### Changing the `cluster_offset` parameter and using a custom `clucenters_fn` function
+
+```{r}
+xaxis <- list(range = c(-55, 55))
+yaxis <- list(scaleanchor = "x", scaleratio = 1, range = c(-57, 45))
+seed <- 222
+```
+
+```{r}
+set.seed(seed)
+e16 <- clugen(2, 8, 1000, c(1, 1), pi / 4, c(10, 10), 10, 2, 2.5)
+plot_ly(x = e16$points[, 1], y = e16$points[, 2], color = as.character(e16$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e16: default", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+```{r}
+set.seed(seed)
+e17 <- clugen(2, 8, 1000, c(1, 1), pi / 4, c(10, 10), 10, 2, 2.5,
+              cluster_offset = c(20, -20))
+plot_ly(x = e17$points[, 1], y = e17$points[, 2], color = as.character(e17$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e17: cluster_offset = [20, -20]", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+```{r}
+# Custom clucenters function: places clusters in a diagonal
+centers_diag_fn <- function(nclu, csep, coff) {
+  matrix(1, nrow = nclu, ncol = length(csep)) * (1:nclu * max(csep)) + rep(coff, each = nclu)
+}
+
+set.seed(seed)
+e18 <- clugen(2, 8, 1000, c(1, 1), pi / 4, c(10, 10), 10, 2, 2.5, 
+              cluster_offset = c(-50, -50), clucenters_fn = centers_diag_fn)
+plot_ly(x = e18$points[, 1], y = e18$points[, 2], color = as.character(e18$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e18: custom clucenters function", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
 
 
 
