--- a/vignettes/examples.Rmd
+++ b/vignettes/examples.Rmd
@@ -334,7 +334,7 @@ plot_ly(x = e27$points[, 1], y = e27$points[, 2], color = as.character(e27$point
 ### Controlling final point positions from their projections on the cluster-supporting line
 
 ```{r}
-xaxis <- list(range = c(-45, 30))
+xaxis <- list(range = c(-45, 31))
 yaxis <- list(scaleanchor = "x", scaleratio = 1, range = c(-20, 40))
 seed <- 12321
 ```
@@ -372,7 +372,8 @@ plot_ly(x = e30$points[, 1], y = e30$points[, 2], color = as.character(e30$point
 
 ```{r}
 set.seed(seed)
-e31 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, point_dist_fn = "n")
+e31 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0,
+              point_dist_fn = "n")
 plot_ly(x = e31$points[, 1], y = e31$points[, 2], color = as.character(e31$point_clusters),
         type = "scatter", mode = "markers", marker = marker2d) %>%
   layout(title = "e31: proj_dist_fn=\"norm\" (default)", xaxis = xaxis, yaxis = yaxis, showlegend = F)
@@ -380,7 +381,8 @@ plot_ly(x = e31$points[, 1], y = e31$points[, 2], color = as.character(e31$point
 
 ```{r}
 set.seed(seed)
-e32 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, point_dist_fn = "n", proj_dist_fn = "unif")
+e32 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0,
+              point_dist_fn = "n", proj_dist_fn = "unif")
 plot_ly(x = e32$points[, 1], y = e32$points[, 2], color = as.character(e32$point_clusters),
         type = "scatter", mode = "markers", marker = marker2d) %>%
   layout(title = "e32: proj_dist_fn=\"unif\"", xaxis = xaxis, yaxis = yaxis, showlegend = F)
@@ -391,12 +393,52 @@ plot_ly(x = e32$points[, 1], y = e32$points[, 2], color = as.character(e32$point
 proj_beta <- function(len, n) len * rbeta(n, 0.1, 0.1) - len / 2
 
 set.seed(seed)
-e33 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, point_dist_fn = "n", proj_dist_fn = proj_beta)
+e33 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0,
+              point_dist_fn = "n", proj_dist_fn = proj_beta)
 plot_ly(x = e33$points[, 1], y = e33$points[, 2], color = as.character(e33$point_clusters),
         type = "scatter", mode = "markers", marker = marker2d) %>%
   layout(title = "e33: custom proj_dist_fn (Beta)", xaxis = xaxis, yaxis = yaxis, showlegend = F)
 ```
 
+#### Custom point placement using the exponential distribution
+
+```{r}
+# Custom point_dist_fn: final points placed using the Exponential distribution
+clupoints_n_1_exp <- function(projs, lat_std, len, clu_dir, clu_ctr) {
+    dist_exp <- function(npts, lstd) lstd * rexp(npts, rate = 2 / lstd)
+    clupoints_n_1_template(projs, lat_std, clu_dir, dist_exp)
+}
+```
+
+```{r}
+set.seed(seed)
+e34 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0,
+              point_dist_fn = clupoints_n_1_exp)
+plot_ly(x = e34$points[, 1], y = e34$points[, 2], color = as.character(e34$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e34: proj_dist_fn=\"norm\" (default)", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+```{r}
+set.seed(seed)
+e35 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0,
+              point_dist_fn = clupoints_n_1_exp, proj_dist_fn = "unif")
+plot_ly(x = e35$points[, 1], y = e35$points[, 2], color = as.character(e35$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e35: proj_dist_fn=\"unif\"", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
+
+```{r}
+# Custom proj_dist_fn: point projections placed using the Beta distribution
+proj_beta <- function(len, n) len * rbeta(n, 0.1, 0.1) - len / 2
+
+set.seed(seed)
+e36 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0,
+              point_dist_fn = clupoints_n_1_exp, proj_dist_fn = proj_beta)
+plot_ly(x = e36$points[, 1], y = e36$points[, 2], color = as.character(e36$point_clusters),
+        type = "scatter", mode = "markers", marker = marker2d) %>%
+  layout(title = "e36: custom proj_dist_fn (Beta)", xaxis = xaxis, yaxis = yaxis, showlegend = F)
+```
 
 
 
